--- a/02-Python Statements/Additional references 02-Python Statements.ipynb
+++ b/02-Python Statements/Additional references 02-Python Statements.ipynb
@@ -2,60 +2,40 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7745bdde",
+   "id": "aa2b6e89",
    "metadata": {
     "heading_collapsed": true
    },
    "source": [
-    "# 00 Python Object and Data Structure Basics"
+    "# IN PLACE FUNCTION"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11051745",
+   "id": "9c244615",
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
-    "######    Mike Dane , File Opening and formatting"
+    "###### in place function is a function it will do the modificaiton to an object but do not return anything. \n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f78ca964",
+   "id": "612a4b19",
    "metadata": {
     "hidden": true
    },
    "source": [
-    "https://www.youtube.com/watch?v=jC7CPoSDNzE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc9edddd",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
-   "source": [
-    "###### Python Tutorial: Learn Open() function in detail and 'With' statement in 8 Minutes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4cf18aff",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    " https://youtu.be/L-6thRrnyS0"
+    "###### for example :- This shuffles the list \"in-place\" meaning it won't return\n",
+    "###### anything, instead it will effect the list passed"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "530cd870",
+   "id": "4cbf7c95",
    "metadata": {
     "hidden": true
    },
