--- a/02-Python Statements/Excercise/02-if, elif, and else Statements.ipynb
+++ b/02-Python Statements/Excercise/02-if, elif, and else Statements.ipynb
@@ -55,13 +55,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It was true!\n"
+      "Have a good day\n"
      ]
     }
    ],
    "source": [
     "if True:\n",
-    "    print('It was true!')"
+    "    print(\"Have a good day\")"
    ]
   },
   {
@@ -73,245 +73,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I will be printed in any case where x is not true\n"
+      " X is false, the value of x is: \"False\" \n"
      ]
     }
    ],
    "source": [
     "x = False\n",
     "\n",
-    "if x:\n",
-    "    print('x was True!')\n",
+    "if x ==  True:\n",
+    "    print(\" X is true\")\n",
+    "elif x == False:\n",
+    "    print(f\" X is false, the value of x is: \\\"{x}\\\" \")\n",
     "else:\n",
-    "    print('I will be printed in any case where x is not true')"
+    "    print(\"I will be printing in any case where x is not true\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "if True:\n",
-    "    print(\"Hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if False:\n",
-    "    print(\"Hello this is false\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The value of x is True hence executed True condition\n"
-     ]
-    }
-   ],
-   "source": [
-    "if x == False:\n",
-    "    print ( f\"The value of x is {x}\")\n",
-    "elif x == True:\n",
-    "    print(f\"The value of x is {x} hence executed True condition\")\n",
-    "else:\n",
-    "          pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -397,6 +179,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -418,6 +207,295 @@
     "else:\n",
     "    print(\"Welcome, what's your name?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "checking the 0the value 23\n",
+      "------------------------Odd number 23\n",
+      "checking the 1the value 60\n",
+      "-------------------------This is even number\n",
+      "checking the 2the value 20\n",
+      "-------------------------This is even number\n",
+      "checking the 3the value 43\n",
+      "------------------------Odd number 43\n",
+      "checking the 4the value 1\n",
+      "------------------------Odd number 1\n",
+      "checking the 5the value 8\n",
+      "-------------------------This is even number\n",
+      "checking the 6the value 90\n",
+      "-------------------------This is even number\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking the evene numbers in a tuple. \n",
+    "\n",
+    "mylist = [23,60,20,43,1,8,90]\n",
+    "\n",
+    "for i in mylist:\n",
+    "    print (f\"checking the {mylist.index(i)  }the value {i}\")\n",
+    "    if i % 2 == 0 :\n",
+    "        print(\"-------------------------This is even number\")\n",
+    "    else:\n",
+    "        print(f\"------------------------Odd number {i}\")\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding the 0th value 23\n",
+      "------------->Current sum is is 23\n",
+      "Adding the 1th value 60\n",
+      "------------->Current sum is is 83\n",
+      "Adding the 2th value 20\n",
+      "------------->Current sum is is 103\n",
+      "Adding the 3th value 43\n",
+      "------------->Current sum is is 146\n",
+      "Adding the 4th value 1\n",
+      "------------->Current sum is is 147\n",
+      "Adding the 5th value 8\n",
+      "------------->Current sum is is 155\n",
+      "Adding the 6th value 90\n",
+      "------------->Current sum is is 245\n",
+      "The sum is 245\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking the list sum - Sum of the numbers in a list\n",
+    "\n",
+    "list_sum = 0\n",
+    "\n",
+    "for i in mylist:\n",
+    "    print (f\"Adding the {mylist.index(i)  }th value {i}\")\n",
+    "    list_sum = list_sum + i\n",
+    "    print(f\"------------->Current sum is is {list_sum}\"  )\n",
+    "\n",
+    "print(f\"The sum is {list_sum}\"  )\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Currently printing: 0th item :1\n",
+      "Currently printing: 1th item :2\n",
+      "Currently printing: 2th item :3\n",
+      "Currently printing: 3th item :4\n",
+      "Currently printing: 4th item :5\n",
+      "Currently printing: 5th item :6\n",
+      "Currently printing: 6th item :7\n",
+      "Currently printing: 7th item :8\n",
+      "Currently printing: 8th item :9\n",
+      "Currently printing: 9th item :0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterting through stings. \n",
+    "\n",
+    "mystring = \"1234567890\"\n",
+    "\n",
+    "for i in mystring:\n",
+    "    print(f\"Currently printing: {mystring.index(i)}th item :{i}\" )\n",
+    "#     print(\"Hello\")\n",
+    "#     print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 20)\n",
+      "(30, 40)\n",
+      "(50, 60)\n",
+      "(70, 80)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterating through a tuple\n",
+    "\n",
+    "mytuplelist = [(10,20),(30,40),(50,60),(70,80)]\n",
+    "\n",
+    "for i in mytuplelist:\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mytuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 And  20\n",
+      "30 And  40\n",
+      "50 And  60\n",
+      "70 And  80\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a,b in mytuplelist:\n",
+    "    print(a, \"And \" ,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k1 one\n",
+      "k2 two\n",
+      "k3 three\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dictionary unpacking \n",
+    "mydict = {'k1':\"one\" , 'k2':\"two\" ,'k3':\"three\"   }\n",
+    "\n",
+    "for key,values in mydict.items():\n",
+    "    print(key , values)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
