--- a/Notes from Abdul Azeez.ipynb
+++ b/Notes from Abdul Azeez.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f1d6bfb0",
    "metadata": {
     "heading_collapsed": true
    },
@@ -11,6 +12,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f3752740",
    "metadata": {
     "hidden": true
    },
@@ -28,6 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "005e9452",
    "metadata": {
     "hidden": true
    },
@@ -36,6 +39,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "36163bb6",
    "metadata": {
     "hidden": true
    },
@@ -46,6 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9468e122",
    "metadata": {
     "hidden": true
    },
@@ -55,6 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5f9c7b00",
    "metadata": {
     "hidden": true
    },
@@ -66,6 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "02ed1265",
    "metadata": {
     "hidden": true
    },
@@ -74,6 +81,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c1e130a3",
    "metadata": {
     "heading_collapsed": true
    },
@@ -83,6 +91,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a090a02",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -94,6 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b0c5de53",
    "metadata": {
     "hidden": true
    },
@@ -138,6 +148,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6deb68a1",
    "metadata": {
     "hidden": true
    },
@@ -147,6 +158,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0b199cf",
    "metadata": {
     "hidden": true
    },
@@ -166,6 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bbde0acb",
    "metadata": {
     "hidden": true
    },
@@ -174,6 +187,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1059a4c3",
    "metadata": {
     "heading_collapsed": true
    },
@@ -183,6 +197,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "232dfb1b",
    "metadata": {
     "hidden": true
    },
@@ -193,6 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "49439f61",
    "metadata": {
     "hidden": true
    },
@@ -202,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -216,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
