--- a/02-Python Statements/Additional references 02-Python Statements.ipynb
+++ b/02-Python Statements/Additional references 02-Python Statements.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aa2b6e89",
    "metadata": {
     "heading_collapsed": true
    },
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c244615",
    "metadata": {
     "hidden": true
    },
@@ -23,7 +21,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "612a4b19",
    "metadata": {
     "hidden": true
    },
@@ -35,7 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cbf7c95",
    "metadata": {
     "hidden": true
    },
@@ -45,7 +41,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -59,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
