--- a/03-Methods and Functions/Additional References 03-Methods and Functions.ipynb
+++ b/03-Methods and Functions/Additional References 03-Methods and Functions.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ddf02c1c",
    "metadata": {},
    "source": [
     "# Snake Casing naming system"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "383d4876",
    "metadata": {},
    "source": [
     "name_of_the_function : This is the followed naming system in Python"
@@ -18,14 +16,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9586971a",
    "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -39,7 +36,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
