--- a/03-Methods and Functions/Excercise/02-Functions copy.ipynb
+++ b/03-Methods and Functions/Excercise/02-Functions copy.ipynb
@@ -83,6 +83,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sample_function(argument1, argument2):\n",
+    "    '''\n",
+    "    This is the documentation on the function. \n",
+    "    spanned across multiple lines\n",
+    "    should be tested\n",
+    "    '''\n",
+    "    print(argument1, argument2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function sample_function in module __main__:\n",
+      "\n",
+      "sample_function(argument1, argument2)\n",
+      "    This is the documentation on the function. \n",
+      "    spanned across multiple lines\n",
+      "    should be tested\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(sample_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_function(\"hello\",\"world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1359,7 +1428,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1373,7 +1442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
